@@ -1,0 +1,7 @@
+double _difftime64(unsigned long long _Time1,unsigned long long _Time2)
+{
+  unsigned long long r = _Time2 - _Time1;
+  if (r > _Time2)
+    return -((double) (_Time1 - _Time2);
+  return (double) r;
+}
